--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "2.10.0",
     "gray-matter": "4.0.2",
     "next": "latest",
+    "next-seo": "^4.22.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "remark": "11.0.2",
